--- a/css/prime.css
+++ b/css/prime.css
@@ -2,6 +2,11 @@ html, body {
     font-family: 'FuturaPTWebBook';
   } 
 
+body {
+	background-color: #212124;
+	color: #BFBFBF;
+   }
+
 @font-face {
 	font-family: 'FuturaPTWebBook';
 	src:
